Fix word wrap bug when choices become too long

--- a/app/jvm/src/main/assets/stylesheets/main.less
+++ b/app/jvm/src/main/assets/stylesheets/main.less
@@ -228,6 +228,7 @@ table.table-bordered {
         flex-grow: 1;
         flex-shrink: 0;
         flex-basis: auto;
+        max-width: 70%;
 
         .choices {
           list-style: none;
